--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".module.main.MainActivity"
+            android:configChanges="keyboardHidden"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="main.MainActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".module.login.LoginActivity"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait" >
@@ -55,13 +64,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".module.main.MainActivity"
+            android:name=".module.fingerprint.FingerPrintActivity"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="main.MainActivity" />
+                <action android:name="fingerprint.FingerPrintActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
