注册用户成功。
Signed-off-by: wanruome <wanruome@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,15 @@
             </intent-filter>
         </activity>
         <activity
+           android:name=".module.userinfo.RegisterActivity"
+            android:configChanges="keyboardHidden"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="userinfo.RegisterActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".module.gesturelock.GestureLockActivity"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait" >
